DDF-2786 Fix issue with header and footer during zoom (#1658)
- Previously, the header and footer didn't take into account the current user's zoom.  Now they do.  Various updates to css to take this into account.
 - Simplified the header and footer templates.  Updated their regions to use replace element to simplify things further.  Added a tooltip in case the text is cut off.

--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/slideout/left/slideout.left.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/slideout/left/slideout.left.less
@@ -24,3 +24,24 @@
         transform: translateX(0%);
     }
 }
+
+body.has-header @{customElementNamespace}slideout.is-left {
+    > .slideout-content {
+        top: 1.5rem;
+        height: ~'calc(100% - 1.5rem)';
+    }
+}
+
+body.has-footer @{customElementNamespace}slideout.is-left {
+    > .slideout-content {
+        top: 0%;
+        height: ~'calc(100% - 1.5rem)';
+    }
+}
+
+body.has-header.has-footer @{customElementNamespace}slideout.is-left {
+    > .slideout-content {
+        top: 1.5rem;
+        height: ~'calc(100% - 3rem)';
+    }
+}
