--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/slideout/right/slideout.right.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/slideout/right/slideout.right.less
@@ -20,3 +20,24 @@
         transform: translateX(-100%);
     }
 }
+
+body.has-header @{customElementNamespace}slideout.is-right {
+    > .slideout-content {
+        top: 1.5rem;
+        height: ~'calc(100% - 1.5rem)';
+    }
+}
+
+body.has-footer @{customElementNamespace}slideout.is-right {
+    > .slideout-content {
+        top: 0%;
+        height: ~'calc(100% - 1.5rem)';
+    }
+}
+
+body.has-header.has-footer @{customElementNamespace}slideout.is-right {
+    > .slideout-content {
+        top: 1.5rem;
+        height: ~'calc(100% - 3rem)';
+    }
+}
